minor fix - align colab and contact

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -305,7 +305,7 @@ h1>a:hover {
 
 .group_logo {
   flex: 25%; 
-  margin: 25px 25x 25px 0px;
+  margin: 25px 25px 25px 0px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -315,7 +315,8 @@ h1>a:hover {
 }
 .intro-text {
   font-weight: bold;
-  margin-top: 10px;
+  margin-top: 20px;
+  margin-bottom: 20px;
   font-size: 30px;
 }
 .info-container {
@@ -328,12 +329,19 @@ h1>a:hover {
   display: flex; 
   flex-direction: column; 
   align-items: flex-start; 
-  min-width: 200px; 
   width: 50%; 
   position: relative;
 }
+.collaboration ul {
+  margin: 0; 
+  padding-left: 20px;
+}
+.collaboration ul li {
+  margin-top: 0;  
+  padding-top: 0; 
+}
 .map {
-  flex: 80%;
+  flex: 100%;
   margin-right: 25px;
 }
 @media (max-width: 750px) {
